--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,11 @@
+<!--
+Will Walker
+University of Colorado Boulder
+Creation Date:  Monday, September 30th 2019, 11:48:02 am
+File: home.html
+-->
+
+
 <!-- Home Page -->
 <!doctype html>
 <html lang="en">
@@ -37,7 +45,14 @@
 	  </div>
 	</nav>
 	<div class="container">
-		<h1>Home Page (Incomplete)</h1>
+		<div class = "jumbotron"> 
+			<h1 class = "display-4">CU Buffs Statistics</h1>
+			<img src="../resources/img/cu_boulder_logo.jpg" alt="An image of a tree taken by Brian Green & listed on Wikipedia" height="150px" width="150px"> 
+			<h1 class = "lead"> This is a website that will compile statistics about our CU Buffs football team throughout the season. See the season stats for team stats, or player information for more specific player stats</h1>
+			<h1 class = "my-4"> <a href="https://cubuffs.com">Buffs homepage </a></h1>
+		</div>
+		
+		
 		<!--Add your code for the home page here -->
 		<!-- Home Page Requirements: 
 		Your home page must include the following components:
@@ -47,7 +62,7 @@
 			3. A short description of your website (2 sentences).
 			4. A Hyperlink to the Buffs official home page [ https://cubuffs.com/ ]
 			5. At least 1 Bootstrap class to modify your content
-
+			
 		
 		-->
 	</div>
