--- a/views/player_info.html
+++ b/views/player_info.html
@@ -46,6 +46,23 @@
 						   to allow the user to select between 3 temp players (switching between
 						   the players will be implemented in a future lab).
 				-->
+				<div class="card">
+					<img class="card-img-top" src="../resources/img/temp_image.svg" alt="An image of a tree taken by Brian Green & listed on Wikipedia" height="120px" width="90px">
+					<div class="card-body">
+					  <p class="card-title">Blank Title</p>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				  </div>
+				  <div class="dropdown">
+					<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  Choose a player
+					</button>
+					<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					  <a class="dropdown-item" href="#">Action</a>
+					  <a class="dropdown-item" href="#">Another action</a>
+					  <a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				  </div>
 			</div>
 			<div class="col-8">
 				<!-- 
@@ -58,6 +75,26 @@
 					|  Rushing Yards: 378  |  Avg. Rushing Yards: 12  |
 					|  Receiving Yards: 57 |  Avg. Receiving Yards: 2 |
 				-->
+				<table class = "table table-bordered">
+					<tr>
+						<th scope = "row">Year</th><td>Junior</td>
+					</tr>
+					<tr>
+						<th scope = "row">Major</th><td>History</td>
+					</tr>
+					<tr>
+						<th scope = "row">Games Played</th><td>32</td>
+					</tr>
+					<tr>
+						<td scope = "row">Passing Yards: 855</td><td>Avg Passing Yards: 26</td>
+					</tr>
+					<tr>
+						<td scope = "row"> Rushing Yards: 378</td><td>Avg. Rushing Yards: 12</td>
+					</tr>
+					<tr>
+						<td scope = "row">Receiving Yards: 57</td><td>Avg. Receiving Yards: 2</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 		
