--- a/views/team_stats.html
+++ b/views/team_stats.html
@@ -43,6 +43,27 @@
 				2. A table listing 3 different football matches (Colorado State, Nebraska, & New Hampshire)
 				3. A second table listing the Win/Loss ratio for the season
 		-->
+		<div class="jumbotron">
+			<h1 class="display-4">Fall 2019</h1>
+			<p class="lead">Overall statistics for the Fall 2019 season</p>
+		  </div>
+		  <table class = "table table-striped">
+			<tr>
+				<th scope = "col">Date</th><th scope = "col">Opponent</th><th scope="col">Opponent's Score</th> <th scope = "col"> Buff's Score</th><th scope = "col">Winner</th>
+			</tr>
+			<tr>
+				<th scope = "row">8/30/19</th><td>Colorado State</td><td>31</td><td>52</td><td>Buffs Win!</td>
+			</tr>
+			<tr>
+				<th scope = "row">9/7/19</th><td>Nebraska </td><td>31</td><td>34</td><td>Buffs Win!</td>
+			</tr>
+			<tr>
+				<th scope = "row">9/14/19</th><td>Air Force</td><td>30</td><td>23</td><td>Air Force</td>
+			</tr>
+			<tr>
+				<th scope = "row">9/21/19</th><td>Arizona State</td><td>31</td><td>34</td><td>Buffs Win!</td>
+			</tr>
+		</table>
 	</div>
   
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
