Registration Page pt1

--- a/views/register.html
+++ b/views/register.html
@@ -1,20 +1,23 @@
 <!-- Registration Page -->
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <title>Register Page</title>
-	<link rel='icon' href='../resources/img/favicon.ico' type='image/x-icon'/>
-    <!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<title>Register Page</title>
+	<link rel='icon' href='../resources/img/favicon.ico' type='image/x-icon' />
+	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link href="../resources/css/my_style.css" rel="stylesheet">
-  </head>
-  <body>
-	
+</head>
+
+<body>
+
 	<img src="../resources/img/beproudcapaabanner.jpg" class="img-fluid" alt="Registration Page Banner for CU Football">
-    <br>
+	<br>
 	<br>
 	<div class="container">
 		<form action="home.html">
@@ -33,11 +36,46 @@
 					11. Submit Button (links to home page)
 
 			-->
+			
+			<div class="form-inline">
+				<label class="sr-only" for="firstName">Name</label>
+				<input type="text" class="form-control" id="firstName" placeholder="First Name">
+				<label class="sr-only" for="lastName">Username</label>
+				<input type="text" class="form-control" id="lastName" placeholder="Last Name">
+			</div>
+			<div class="form-group">
+				<label for="formGroupExampleInput">Email</label>
+				<input type="text" class="form-control" id="formGroupExampleInput" placeholder="john.doe@colorado.edu">
+				<label for="formGroupExampleInput">Password</label>
+				<input type="password" class="form-control" id="formGroupExampleInput" name = "mypwfield">
+				<label for="formGroupExampleInput">Confirm Password</label>
+				<input type="password" class="form-control" id="formGroupExampleInput" name = "mypwfieldc">
+			</div>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"
+					checked>
+				<label class="form-check-label" for="exampleRadios1">
+					CU Alumni
+				</label>
+			</div>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+				<label class="form-check-label" for="exampleRadios2">
+					CU Student
+				</label>
+			</div>
 			<input type="submit" value="submit" class="btn btn-primary btn-block">
 		</form>
 	</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
